hphp/hack/doc/hack-langspec/tests/Classes/Generator_getReturn.php.expectf

Fatal error: HH mode: content before <?hh (Line: 1, Char: 25)
syntax error, unexpected T_HH_ERROR, expecting $end in %s/tests/Classes/Generator_getReturn.php on line 1